Fixes library contact form bug and form submision output spacing

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_form_elements.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_form_elements.scss
@@ -13,6 +13,16 @@ input[type="checkbox"]:focus {
   clear: both;
 }
 
+.entity-entityform {
+  .submitted {
+    display: none;
+  }
+  .field-label {
+    @include leader(1);
+    margin-bottom: 0;
+  }
+}
+
 // Hides the entityform titles when rendered to pages
 #content .block-entityform-block > h2,
 #content .entity-entityform-type > h2 {
